tests/suite/snapshots/suite__check__tests__check__bad_global_3.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_global_3.xi:1:10]
   │
 1 │ x: int = foo()
   · ───┬──   ──┬──  
   ·    ╰──────────── Expected int because of this
   ·            │    
   ·            ╰──── Expected int but found bool
───╯

